--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".CalendarInActivity"/>
+        <activity android:name=".CalendarInActivity" android:configChanges="orientation|keyboardHidden"/>
         <activity android:name=".HomeActivity" />
+        <activity android:name=".TipActivity"/>
+        <activity android:name=".EditActivity"/>
+        <activity android:name=".ProfileActivity"/>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,7 +21,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ProfileActivity" />
     </application>
 
 </manifest>
