--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'com.android.support:design:29.0.0'
     implementation 'com.prolificinteractive:material-calendarview:1.4.3'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.0'
     annotationProcessor 'androidx.room:room-compiler:2.3.0'
 
 
