--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         <activity android:name=".HomeActivity" />
         <activity android:name=".TipActivity"/>
         <activity android:name=".EditActivity"/>
+        <activity android:name=".BeforeTipActivty"/>
         <activity android:name=".ProfileActivity"/>
         <activity android:name=".MainActivity">
             <intent-filter>
